# ZTG

./: .gitignore  CMakeLists.txt  LICENSE  README.md  buildAll.bat  buildExamples.bat  buildTools.bat  entryPoint.c  entryPoint.h  main.c
Examples/ZTG_FatBall/: CMakeLists.txt  README.md  entryPoint.c  entryPoint.h  main.c
Examples/ZTG_Snake/: CMakeLists.txt  GameLoop.c  GameLoop.h  entryPoint.c  entryPoint.h  main.c
ZTG_Tools/ZTG_SpriteEditor/: CMakeLists.txt  README.md  entryPoint.c  entryPoint.h  main.c
ZTG_Tools/ZTG_SpriteEditor/src/: zflags.h
src/ZTG/: CMakeLists.txt  ZTG.h  ZTG_Collisions.c  ZTG_Collisions.h  ZTG_Core.c  ZTG_Core.h  ZTG_Defines.h  ZTG_Draw.c  ZTG_Draw.h  ZTG_Objects.c  ZTG_Objects.h  ZTG_Utils.c  ZTG_Utils.h  ZTG_Vectors.c  ZTG_Vectors.h
src/ZTG/Fonts/: 8x8font.h  font8x8_basic.h  fonts.h
src/ZTG/Fonts/ib8x8u/: ib8x8u.c
src/ZTG/Fonts/icl8x16/: icl8x16u.c
src/ZTG/resources/: resource.rc  ztg_logo.psd
